# greense

./: .gitignore  README.md  _config.yml  con.py  config.py  conn.py  index.html  index.md
brand/docs/: greense-mini-brandbook.txt
brand/firmware/: greense_logo.h
client/: README.md  config.py
client/N01_ESP32_LAB/: atuadores.py  config.py  ec_calibration.json  sensores.py
client/N01_Estufa_Germinar/: CMakeLists.txt
client/N01_Estufa_Germinar/main/: config.h  main.c
client/N01_Estufa_Germinar_C/: README.md  sdkconfig
client/N01_Estufa_Germinar_C++/: README.md  secrets.h
client/N02_ESP82_LAB/: atuadores.py  conexao.py  config.py  main.py
client/N02_Estufa_Maturar/: CMakeLists.txt  sdkconfig
client/N02_Estufa_Maturar/main/: config.h  main.c
client/N02_Estufa_Maturar_C/: CMakeLists.txt  README.md
client/N02_Estufa_Maturar_C++/: README.md
client/N02_Estufa_Maturar_C++/main/: CMakeLists.txt  main.c
client/N02_Estufa_Maturar_C++/main/certs/: greense_cert.pem
client/N02_Estufa_Maturar_C++/main/sensores/: dht.c  sensores.c
client/N03_ESP32_LAB/: sdkconfig.old
client/N03_ESP32_LAB/main/: CMakeLists.txt  conexao.c  config.h  main.c
client/N03_Estufa_MP/: atuadores.py  clientEstufa01Esp32.py
client/N03_Estufa_MP/lib/: ec_sensor.py  ens160.py
client/N03_Estufa_P/: main.py
client/N03_Estufa_P/lib/: ph_sensor.py
client/N04_Estufa_Camera/: partitions.csv  sdkconfig  sdkconfig.old
client/N04_Estufa_Camera/main/: CMakeLists.txt  main.c  secrets.h
client/N04_Estufa_Camera_C/: README.md  sdkconfig
client/N04_Estufa_Camera_C++/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.old
client/N04_Estufa_Camera_C++/main/: main.c  secrets.h
client/N04_Estufa_Camera_C/main/: CMakeLists.txt
client/N05_Estufa_Termica/: CMakeLists.txt
client/N05_Estufa_Termica/main/: CMakeLists.txt  config.h  main.c  secrets.h
client/N05_Estufa_Termica_C/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
client/N05_Estufa_Termica_C++/: README.md
client/N05_Estufa_Termica_C++/main/: CMakeLists.txt  config.h  main.c
client/N05_Estufa_Termica_C++/main/app/: app_http.c  app_http.h  app_time.c  app_time.h
client/N05_Estufa_Termica_C++/main/bsp/: bsp_gpio.h  bsp_wifi.c
client/N05_Estufa_Termica_C++/main/gui/: gui_led.c  gui_led.h
client/N05_Estufa_Termica_MP/: README.md
client/N05_Estufa_Termica_P/: README.md  main.py
client/N06_Sensor_Campo/: CMakeLists.txt  log_temp.csv  main.py  sdkconfig
client/N06_Sensor_Campo_2_C/: PRESETS_UPLOAD_README.md  README.md  presets_exemplo.json  sdkconfig
client/N06_Sensor_Campo_2_C/main/: CMakeLists.txt  idf_component.yml  main.c
client/N06_Sensor_Campo_2_C/main/app/: app_atuadores.h  app_cultivation_tolerance.c  app_data_logger.c  app_data_logger.h  app_main.c  app_sampling_period.c  app_sampling_period.h  app_sensor_manager.c  app_sensor_manager.h  app_stats_window.c  gui_services.h
client/N06_Sensor_Campo_2_C/main/bsp/: board.h
client/N06_Sensor_Campo_2_C/main/bsp/actuators/: bsp_led.c
client/N06_Sensor_Campo_2_C/main/bsp/network/: bsp_wifi_ap.h
client/N06_Sensor_Campo_2_C/main/bsp/sensors/: bsp_adc.c  bsp_adc.h  bsp_bh1750.h  bsp_dht11.c  bsp_dht11.h  bsp_ds18b20.c  bsp_ds18b20.h  bsp_sensors.c  dht.c  dht.h
client/N06_Sensor_Campo_2_C/main/gui/web/: gui_http_server.c  gui_http_server.h  logo.h
client/N06_Sensor_Campo_C/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
client/N06_Sensor_Campo_C++/: README.md  partitions.csv  sdkconfig  sdkconfig.old
client/N06_Sensor_Campo_C++/main/: CMakeLists.txt  main.c
client/N06_Sensor_Campo_C++/main/atuadores/: atuadores.h
client/N06_Sensor_Campo_C++/main/libs/: data_logger.c  data_logger.h  http_server.c
client/N06_Sensor_Campo_C++/main/sensores/: ds18b20.c  sensores.c  sensores.h  soil_moisture.c  soil_moisture.h
client/N06_Sensor_Campo_MP/: log_temp.csv  soil_calib.json
client/N06_Sensor_Campo_P/: main.py
client/N07_Estufa_Artigo_C/: ANALISE_CONFIABILIDADE.md  ANALISE_QUALIDADE_FINAL.md  CMakeLists.txt  README.md  README_THERMAL.md  exemplo_uso_thermal.py  partitions.csv  sdkconfig  visualize_thermal.py
client/N07_Estufa_Artigo_C/main/: CMakeLists.txt  config.h  idf_component.yml  main.c
client/N07_Estufa_Artigo_C/main/app/: app_http.c  app_http.h  app_main.c  app_main.h  app_thermal.c  app_thermal.h  app_time.c  app_time.h
client/N07_Estufa_Artigo_C/main/bsp/: bsp_camera.c  bsp_camera.h  bsp_gpio.c  bsp_gpio.h  bsp_pins.h  bsp_sdcard.c  bsp_sdcard.h  bsp_spiffs.c  bsp_spiffs.h  bsp_uart.c  bsp_uart.h  bsp_wifi.c  bsp_wifi.h
client/N07_Estufa_Artigo_C/main/gui/: gui_led.c  gui_led.h
client/N08_Camera_P4_C/: .gitignore  CMakeLists.txt  CONFIGURACOES_CAMERA_ALVOS.md  README.md
docs/: index.html
server/: README.md  dashboard.py
server/N01_RASP4_LAB/: app.py  copia_foto_cam02.py  copia_foto_cam03.py  serve01Form.py  server01Full.py  server01IA.py  server01Rasp4.py  server01Rasp4Dual.py  server01Rasp4Full.py  serverTermica.py  termica_matrix_20250904_220410.csv
server/templates/: index_socket.html
(+119 files in other folders)
